添加LabelView库模块，及其示例代码

--- a/Android/Demo/demo/src/main/res/values/strings.xml
+++ b/Android/Demo/demo/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
-    <string name="app_name">PairView</string>
+    <string name="app_name">Demo</string>
+
+    <string-array name="labels_choose_job_list">
+        <item>android开发</item>
+        <item>iOS开发</item>
+        <item>javaWeb开发</item>
+        <item>Go开发</item>
+        <item>TA的相册</item>
+    </string-array>
 </resources>
